Addition of starter code to start the implementation of the projet

--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
 <body>
     <header class="header">
         <svg class="hide header__svg-filters"></svg>
-        <h1 class="header__title" title="Title">Title</h1>
+        <h1 class="header__title" title="Title">Speech to text</h1>
     </header>
 
     <main class="index">
+        <h2 class="index__title-2 hide"></h2>
+        <section class="index__words-container">
 
+            <audio src="#"></audio>
+
+            <p class="index__words"></p>
+        </section>
     </main>
     <footer class="footer">
         <p class="footer__paragraph">
