Starrting to implement the new buttons

--- a/index.html
+++ b/index.html
@@ -57,37 +57,8 @@
             </fieldset>
 
             <fieldset class="index__fieldset index__fieldset--result">
+                <h2 class="index__title-2">Result:</h2>
                 <section class="index__sentences-container" spellcheck="false">
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
-                    <p class="index__sentences">Test test test test test test test test test test test test test.</p>
                 </section>
             </fieldset>
 
