Finished implementing the STT

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
             </fieldset>
 
             <fieldset class="index__fieldset index__fieldset--buttons">
-                <button type="button" class="index__button">Copy text</button>
-                <button type="button" class="index__button">Download as <code>.txt</code> file</button>
+                <button type="button" class="index__button index__button--copy">Copy text</button>
+                <button type="button" class="index__button index__button--download">Download as <code>.txt</code>
+                    file</button>
             </fieldset>
         </form>
 
