Fixed the error message

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
         <svg class="hide header__svg-filters"></svg>
         <h1 class="header__title" title="Title">Speech to text</h1>
     </header>
-    <h2 class="index__title-2 hide"></h2>
+
+    <section class="index__error-section">
+        <div class="index__wrapper">
+            <h2 class="index__title-2 hide index__title-2--error"></h2>
+        </div>
+    </section>
 
     <main class="index">
 
