--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                 <legend class="index__legend">Recognition playstate:</legend>
                 <label class="index__label index__label--playstate">
                     <input type="radio" class="index__input index__input--start" name="recognition-play-state"
-                        checked />Start
+                        checked />▶️ Start
                     recognition
                 </label>
                 <label class="index__label index__label--playstate">
-                    <input type="radio" class="index__input index__input--stop" name="recognition-play-state" />Stop
+                    <input type="radio" class="index__input index__input--stop" name="recognition-play-state" />⏹️ Stop
                     recognition
                 </label>
             </fieldset>
